--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@plugin './hero.ts';
+
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@source "../components/**/*.{js,ts,jsx,tsx,mdx}";
+@custom-variant dark (&:is(.dark *));
 
 /*:root {*/
 /*  --background: #ffffff;*/
