--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
+
+/*@config "../../tailwind.config.ts";*/
+
 @plugin './hero.ts';
+
+@theme {
+    --background-image-dark-gradient: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
+}
 
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @source "../components/**/*.{js,ts,jsx,tsx,mdx}";
