--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,12 @@
 @source "../components/**/*.{js,ts,jsx,tsx,mdx}";
 @custom-variant dark (&:is(.dark *));
 
+@layer components {
+    .vertical-center {
+        height: calc(100vh - 64px);
+    }
+}
+
 /*:root {*/
 /*  --background: #ffffff;*/
 /*  --foreground: #171717;*/
